# a-maze-ing

./: .gitignore  README.md  notes.md  tasks.md
code/: Makefile  a-maze-ing.py  a_maze_ing.py  config.txt  config_handler.py  maze.txt  maze_display.py  output_maze.txt  pyproject.toml
code/mazegen/: __init__.py  cell.py  generator.py  maze_gen_sh.py
test_cases/: Ellers_blocked_area.md  solving_path.md  tests.md
